--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+      <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+" />
+      <img src="https://i.imgur.com/H1qsYEl.png" alt="Happy Monkey" />
+      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tomsguide.com%2Fhow-to%2Fhow-to-hack-the-chrome-dinosaur-game&psig=AOvVaw0q_728DBtbe33TSdWlFy15&ust=1668672123542000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCOjKm56esvsCFQAAAAAdAAAAABAD" alt="my favorite game" title="Dinosaur Game!" />
   </body>
 </html>
